--- a/css/product.css
+++ b/css/product.css
@@ -278,7 +278,7 @@
 
 /* ============================= */
 
-.container {
+.container1 {
     /* max-width: 600px; */
     margin: auto;
     background-color: #fff;
