--- a/css/shop.css
+++ b/css/shop.css
@@ -172,20 +172,15 @@ button{cursor: pointer;}
     grid-template-areas: 
     'one two three';
     justify-items: center;
+    cursor: pointer;
+    position: relative;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-/* /* .sim-product:nth-child(1){
-    grid-area: one;
-}
-
-.sim-product:nth-child(2){
-    grid-area: two;
-}
-
-.sim-product:nth-child(3){
-    grid-area: three;
+/* .sim-product:hover{
+    transform: scale(1.05); 
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
 } */
-
 
 .detail-prix{
     padding-top: 10px;
@@ -846,4 +841,42 @@ input[type="range"]::-moz-range-thumb{
     padding: 0 10px;
     font-family: 'Poppins', sans-serif;
     font-size: .7rem;
+}
+
+/* ================================================= */
+/* Style pour l'alerte */
+.alert {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: hsl(var(--clr-white) );
+    color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    opacity: 0;
+    transition: opacity 0.3s ease, top 0.3s ease;
+    z-index: 9999;
+}
+
+.alert.show {
+    opacity: 1;
+    top: 50%;
+}
+
+.alert.hide {
+    opacity: 0;
+    top: 40%;
+}
+
+.alert .close-btn {
+    margin-left: 20px;
+    cursor: pointer;
+    font-weight: bold;
+    color: black;
+}
+
+.alert a{
+    text-decoration: none;
 }
