--- a/css/shop.css
+++ b/css/shop.css
@@ -177,10 +177,10 @@ button{cursor: pointer;}
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-/* .sim-product:hover{
+.sim-product:hover{
     transform: scale(1.05); 
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
-} */
+}
 
 .detail-prix{
     padding-top: 10px;
