--- a/css/product.css
+++ b/css/product.css
@@ -447,3 +447,41 @@ h3 {
 .tab-content{
     position: relative;
 }
+
+/* ================================================= */
+/* Style pour l'alerte */
+.alert {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: hsl(var(--clr-white) );
+    color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    opacity: 0;
+    transition: opacity 0.3s ease, top 0.3s ease;
+    z-index: 9999;
+}
+
+.alert.show {
+    opacity: 1;
+    top: 50%;
+}
+
+.alert.hide {
+    opacity: 0;
+    top: 40%;
+}
+
+.alert .close-btn {
+    margin-left: 20px;
+    cursor: pointer;
+    font-weight: bold;
+    color: black;
+}
+
+.alert a{
+    text-decoration: none;
+}
