--- a/css/edit.css
+++ b/css/edit.css
@@ -165,9 +165,9 @@ h2{
   background: hsl(var(--clr-red) / .8);
   border-radius: 5px;
 }
+
 .form button:hover {
-  /* background: rgb(88, 56, 250); */
-  background: hsl(var(--clr-red) / .7);
+  background: hsl(var(--clr-red) / .5);
 }
 /*Responsive*/
 @media screen and (max-width: 500px) {
@@ -177,4 +177,58 @@ h2{
   .form :where(.gender-option, .gender) {
     row-gap: 15px;
   }
+}
+
+
+/* Style pour masquer l'alerte par défaut */
+.custom-alert {
+  display: none; /* Masqué par défaut */
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6); /* Couleur de fond transparente */
+  z-index: 999; /* Pour que l'alerte soit au-dessus de tout */
+  justify-content: center;
+  align-items: center;
+}
+
+.alert-content {
+  background-color: white;
+  padding: 20px;
+  width: 300px;
+  max-width: 80%;
+  border-radius: 10px;
+  text-align: center;
+  position: relative;
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+/* Désactive les interactions sur la page lorsque l'alerte est ouverte */
+.no-interaction {
+  pointer-events: none; /* Désactive tous les clics et interactions */
+  opacity: 0.5; /* Optionnel : diminue l'opacité pour indiquer que la page est désactivée */
+}
+
+/* Classe pour désactiver le défilement */
+.no-scroll {
+  overflow: hidden; /* Désactive le défilement */
+}
+
+.confirmBtn{
+  cursor: pointer;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+#customAlertSelect h2{
+  color: hsl(var(--clr-green));
 }
