--- a/css/profil.css
+++ b/css/profil.css
@@ -58,11 +58,19 @@
     padding-right: 5px;
 } 
 
-.exit{
-    /* padding: 10px 0; */
+#exit,
+#add{
     display: flex;
     align-items: center;
     cursor: pointer;
+}
+#add{
+    padding-right: 10px;
+}
+
+.exit{
+    display: flex;
+    justify-content: center;
 }
 
 .exit i{
@@ -93,9 +101,9 @@ h2{
     border: 1px solid #000;
 }
 
-.info{
+/* .info{
     margin-right: 20px;
-}
+} */
 
 .info-content,
 .adresse-content{
@@ -104,7 +112,8 @@ h2{
 
 .third{
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
 }
 
 .mode,
@@ -124,19 +133,77 @@ h2{
 
 @media (max-width: 35em){
     .third{
-        grid-template-columns: 1fr;
-    }
-
-    .info{
-        margin-right: 0;
-        margin-bottom: 20px;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 10px;
     }
 }
 
-.adresse{
-    margin-bottom: 10px;
+@media (min-width: 35em) and (max-width: 59em){
+    .third{
+        grid-template-columns: repeat(2, 1fr);
+        gap: 10px;
+    }
 }
 
-.select{
-    display: none;
+/* Style pour masquer l'alerte par défaut */
+.custom-alert {
+    display: none; /* Masqué par défaut */
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6); /* Couleur de fond transparente */
+    z-index: 999; /* Pour que l'alerte soit au-dessus de tout */
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .alert-content {
+    background-color: white;
+    padding: 20px;
+    width: 300px;
+    max-width: 80%;
+    border-radius: 10px;
+    text-align: center;
+    position: relative;
+  }
+  
+  .close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 20px;
+    cursor: pointer;
+  }
+  
+  /* Désactive les interactions sur la page lorsque l'alerte est ouverte */
+  .no-interaction {
+    pointer-events: none; /* Désactive tous les clics et interactions */
+    opacity: 0.5; /* Optionnel : diminue l'opacité pour indiquer que la page est désactivée */
+  }
+  
+  /* Classe pour désactiver le défilement */
+  .no-scroll {
+    overflow: hidden; /* Désactive le défilement */
+  }
+  
+  .confirmBtn{
+    cursor: pointer;
+    padding: 5px;
+    border-radius: 5px;
+    background: hsl(var(--clr-red) / .9);
+  }
+  
+  #customAlertSelect h2{
+    color: hsl(var(--clr-green));
+  }
+
+  .iconss{
+    display: flex;
+    gap: 15px;
+  }
+
+.iconss i:hover{
+    background: hsl(var(--clr-black) / 0.1);
 }
