--- a/css/shop.css
+++ b/css/shop.css
@@ -770,7 +770,7 @@ input[type="range"]::-moz-range-thumb{
 } */
 
 .confirm{
-    position: relative;
+    position: absolute;
     bottom: 0;
     width: 100%;
     height: 3rem;
@@ -778,13 +778,7 @@ input[type="range"]::-moz-range-thumb{
     display: flex;
     justify-content: center;
     padding: 2.5px 20px;
-
-    /* position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 32px;
-    padding: 15px 10px; */
-    /* background: hsl(var(--clr-gray)); */
+    margin-bottom: 10px;
     z-index: 10;
 }
 
@@ -879,4 +873,14 @@ input[type="range"]::-moz-range-thumb{
 
 .alert a{
     text-decoration: none;
+}
+
+.block{
+    overflow: scroll;
+    height: 95%;
+}
+
+/* Classe pour désactiver le défilement */
+.no-scroll {
+    overflow: hidden; /* Désactive le défilement */
 }
