--- a/css/contactus.css
+++ b/css/contactus.css
@@ -39,6 +39,7 @@
 }
 
 .contact-us textarea{
+    padding: 10px;
     width: 100%;
     border: 0;
     border-radius: 2rem;
@@ -139,4 +140,8 @@
     .support-info span{
         font-size: 1rem;
     }
+}
+
+.login_div {
+    margin-bottom: 0.25em;
 }
