--- a/css/commande.css
+++ b/css/commande.css
@@ -210,14 +210,14 @@ h2{
     display: flex;
     justify-content: center; /* Centre les éléments horizontalement */
     position: relative;
-    /* background-color: #333; */
+    overflow: scroll;
     height: 60px;
     align-items: center;
 }
 
 .bar-nav li {
     position: relative;
-    margin: 0 20px;
+    /* margin: 0 20px; */
 }
 
 .bar-nav li a {
@@ -274,12 +274,20 @@ h2{
         font-size: 10px;
     }
 
+    /* .bar-nav li a:nth-child(1)::before {
+        bottom: 0;
+    } */
+
     .bar-nav li a::before {
-        bottom: -10px;
+        bottom: 0;
     }
 
     .container1{
         padding: 10px 0;
+    }
+
+    .bar-nav{
+        align-items: flex-end;
     }
 
 }
