--- a/style.css
+++ b/style.css
@@ -385,22 +385,6 @@ svg {
   margin: 1rem 10%;
 }
 
-@media (max-width: 39rem) {
-  .custom-container {
-    margin: 1rem;
-  }
-
-  .headerTop {
-    display: none;
-  }
-}
-
-@media (min-width: 39rem) and (max-width: 59rem) {
-  .headerTop {
-    display: none;
-  }
-}
-
 .phone {
   border-right: 1px solid var(--gray);
   padding-right: 1rem;
@@ -410,373 +394,6 @@ svg {
   border-left: 1px solid var(--gray);
   padding-left: 1rem;
 }
-
-/* .ht-dropdown.cart-box-width {
-  background: #fff !important;
-}
-
-.ht-dropdown {
-  position: absolute;
-  top: 100%;
-  right: 0;
-  background: #fff;
-  width: 170px;
-  padding: 10px;
-  opacity: 0;
-  visibility: hidden;
-  transform: scaleY(0);
-  transform-origin: 0 0;
-  transition: opacity 0.5s, transform 0.5s;
-  box-shadow: 0 0 6px 1px rgba(0, 0, 0, 0.1);
-  z-index: 9999;
-}
-
-.cart-box-width {
-  width: 320px;
-  left: auto;
-  right: 0;
-  background: #fff;
-  box-shadow: 0 3px 9.3px 0.7px rgba(0, 0, 0, 0.15);
-  padding: 0;
-  transition: max-height 0.5s ease-in-out;
-}
-
-@media (max-width: 575px) {
-  .cart-box-width {
-    right: -60px;
-    width: 270px;
-    max-height: 250px;
-    overflow-y: auto;
-  }
-}
-
-.showCart:hover .ht-dropdown {
-  opacity: 1;
-  visibility: visible;
-  transform: scaleY(1);
-}
-
-.cart-empty-title h3 {
-  font-size: 18px;
-  text-transform: none;
-  font-weight: 500;
-  color: #333;
-}
-
-.cart-actions.text-center {
-  display: flex;
-  justify-content: space-between;
-}
-
-.cart-actions a {
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  color: #fff;
-  display: block;
-  font-size: 15px;
-  font-weight: 500;
-  padding: 17px 32px;
-  border-radius: 50px;
-  background-color: #323232;
-}
-
-.cart-actions a:hover {
-  background: #e52e06;
-}
-
-@media (max-width: 39rem) {
-  .cart-actions a {
-    padding: 17px;
-  }
-}
-
-ul li.single-product-cart.mini-cart-action.mini-cart-footer {
-  padding: 0 20px;
-}
-
-.price-content {
-  border-bottom: 1px solid #ededed;
-  margin-bottom: 20px;
-  border-top: 1px solid #ededed;
-  padding-top: 23px;
-}
-
-.price-content {
-  margin-bottom: 0;
-}
-.price-content {
-  overflow: hidden;
-  padding-bottom: 20px;
-}
-.single-cart-box,
-.price-content {
-  border-bottom: 1px solid #ededed;
-  margin-bottom: 20px;
-}
-
-.price-content li span,
-.cart-content span.cart-price {
-  color: #e52e06;
-  float: right;
-  font-size: 18px;
-  font-weight: 700;
-}
-
-.price-content li {
-  font-size: 18px;
-}
-span {
-  transition: none;
-}
-
-.cart-footer {
-  width: 100%;
-}
-
-.single-cart-box {
-  margin-bottom: 18px;
-  overflow: hidden;
-  position: relative;
-}
-.single-cart-box,
-.price-content {
-  border-bottom: 1px solid #ededed;
-  margin-bottom: 20px;
-}
-
-.single-cart-boxx {
-  display: block;
-  overflow: scroll;
-}
-.cart-img {
-  float: left;
-  padding-right: 10px;
-  position: relative;
-  width: 35%;
-}
-.cart-img img {
-  max-width: 100%;
-}
-.pro-quantity {
-  background: #c7b270 none repeat scroll 0 0;
-  border-radius: 100%;
-  color: #fff;
-  font-size: 12px;
-  left: 5px;
-  line-height: 23px;
-  min-width: 25px;
-  padding: 2px 0 0;
-  position: absolute;
-  text-align: center;
-  top: 3px;
-}
-.cart-content {
-  float: left;
-  padding: 0 15px 15px 0;
-  width: 65%;
-}
-.cart-content h6 a {
-  display: block;
-  font-size: 15px;
-  line-height: 20px;
-  text-transform: capitalize;
-  font-weight: 500;
-}
-.cart-content span {
-  display: block;
-  font-size: 14px;
-  line-height: 20px;
-}
-
-.del-icone:hover,
-.cart-content h6 a:hover {
-  color: #e52e06;
-}
-
-.price-content li span,
-.cart-content span.cart-price {
-  color: #e52e06;
-  float: right;
-  font-size: 18px;
-  font-weight: 700;
-}
-.cart-content span.cart-price {
-  float: none;
-}
-
-.cart-price {
-  margin: 5px 0;
-}
-
-.price-content li span,
-.cart-content span.cart-price {
-  color: #e52e06;
-  float: right;
-  font-size: 18px;
-  font-weight: 700;
-}
-.cart-content span.cart-price {
-  float: none;
-}
-.del-icone {
-  color: #696969;
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: 45;
-  font-size: 18px;
-}
-.del-icone:hover,
-.cart-content h6 a:hover {
-  color: #e52e06;
-} */
-
-/* ==============================Slider==================================== */
-
-/* ================================================================= */
-
-/* .hero,
-.hero .glide__slides {
-  background-color: var(--gray);
-  position: relative;
-  height: calc(100vh - 6rem);
-  margin: 0 4rem;
-  overflow: hidden;
-}
-
-.hero .center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  height: 100%;
-  padding-top: 3rem;
-}
-
-.hero .left {
-  position: absolute;
-  top: 0;
-  left: 0;
-  transition: all 1000ms ease-in-out;
-}
-
-.hero .left h1 {
-  font-size: 5rem;
-  margin: 1rem 0;
-}
-
-.hero .left p {
-  font-size: 1.6rem;
-  margin: 0 0 1rem;
-}
-
-.hero .left .hero-btn {
-  display: inline-block;
-  padding: 1rem 3rem;
-  font-size: 1.6rem;
-  margin-top: 1rem;
-  background-color: var(--green);
-  color: white;
-}
-
-.hero .right {
-  flex: 0 0 50%;
-  height: 100%;
-  position: relative;
-  text-align: center;
-}
-
-.hero .right img {
-  position: absolute;
-  width: 55rem;
-  opacity: 0;
-  transition: all 1000ms ease-in-out;
-}
-
-.hero .right img.img1 {
-  width: 85%;
-  right: -25%;
-  bottom: -50%;
-}
-
-.hero .right img.img2 {
-  width: 90%;
-  right: -40%;
-  bottom: -40%;
-}
-
-.glide__slides--active .center .right img {
-  bottom: -3%;
-  opacity: 1;
-}
-
-.glide__slides--active .left {
-  opacity: 1;
-  top: 35%;
-}
-
-@media (max-width: 999px) {
-  .glide__slides--active .left {
-    top: 15%;
-  }
-
-  .hero .right img.img1 {
-    width: 90%;
-  }
-
-  .hero .right img.img2 {
-    width: 100%;
-  }
-}
-
-@media (max-width: 567px) {
-  .center .right img.img1 {
-    width: 30rem;
-  }
-
-  .center .right img.img2 {
-    width: 33rem;
-  }
-
-  .hero,
-  .hero .glide__slides {
-    margin: 0;
-    padding: 0 3rem;
-  }
-
-  .hero .left h1 {
-    font-size: 3rem;
-  }
-
-  .hero .left span {
-    font-size: 1.4rem;
-  }
-
-  .hero .left p {
-    font-size: 1.5rem;
-    width: 80%;
-  }
-} */
-
-/* .single-hero-slider {
-  width: 93vw;
-  height: 100vh;
-  margin-inline: auto;
-  padding-inline: 2rem;
-  background-color: hsl(var(--clr-gray) / 0.5);
-  padding-top: 5rem;
-  background-size: cover;
-} */
-
-/* .single-hero-slider {
-  height: 100vh;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-} */
 
 .bg-img {
   background-position: center center;
@@ -830,75 +447,6 @@ span {
   font-size: 1.3rem;
 }
 
-/* .slick-dots li button {
-  width: 10px;
-  height: 10px;
-  border: 2px solid #e52e06;
-  border-radius: 50%;
-  background: transparent;
-}
-
-.slick-dots li.slick-active button {
-  background: #e52e06;
-} */
-
-/* .slick-dots {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.slick-dots li {
-  margin: 0 5px;
-}
-
-.slick-dots li button {
-  width: 29px;
-  height: 8px;
-  border-radius: 25px;
-  border: none;
-  padding: 0;
-  font-size: 0px;
-  background-color: transparent;
-  background: rgba(51, 51, 51, 0.3);
-  -webkit-transition: all 0.3s linear;
-  -o-transition: all 0.3s linear;
-  transition: all 0.3s linear;
-  -webkit-transform: translate(6px, 6px);
-  -ms-transform: translate(6px, 6px);
-  transform: translate(6px, 6px);
-}
-
-.slick-dots li.slick-active button {
-  width: 12px;
-  height: 12px;
-  background: #333;
-  -webkit-transform: translate(4px, 4px);
-  -ms-transform: translate(4px, 4px);
-  transform: translate(4px, 4px);
-}
-
-.slick-dots.dot-style-1-position-1 {
-  position: absolute;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  transform: translateX(-50%);
-  bottom: 35px;
-}
-
-.slick-dots.dot-style-1-center {
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-
-.slick-dots.dot-style-1-mt1 {
-  margin-top: 30px;
-} */
-
 .animate-text {
   opacity: 0;
   transform: translateY(20px);
@@ -908,4 +456,93 @@ span {
 .animate-text.active {
   opacity: 1;
   transform: translateY(0);
+}
+
+@media (max-width: 39rem) {
+  .custom-container {
+    margin: 1rem;
+  }
+
+  .headerTop {
+    display: none;
+  }
+
+  /* .custom-container {
+    margin-top: 2rem;
+  } */
+
+  .hero-slider-content {
+    top: 10%;
+    width: 80%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+}
+
+/* Desktop */
+.single-hero-slider {
+  height: 620px;
+}
+
+/* Mobile */
+@media (max-width: 624px) {
+  .single-hero-slider {
+    height: 320px !important;
+  }
+}
+
+/* Tablettes */
+@media (min-width: 624px) and (max-width: 944px) {
+  .single-hero-slider {
+    height: 520px !important;
+  }
+
+  .headerTop {
+    display: none;
+  }
+
+  /* .custom-container {
+    margin-top: 2rem;
+  } */
+}
+
+/* Conteneur des dots */
+.slick-dots {
+  position: absolute !important;
+  bottom: 20px !important;
+  left: 50% !important;
+  transform: translateX(-50%) !important;
+  display: flex !important;
+  justify-content: center;
+  gap: 10px !important;
+  list-style: none !important;
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
+/* Style par défaut des dots */
+.slick-dots li {
+  width: 28px !important;
+  height: 8px !important;
+  background-color: #ddd !important;
+  border-radius: 4px !important;
+  transition: all 0.3s ease !important;
+}
+
+.slick-dots li:hover {
+  background-color: red !important;
+}
+
+/* Bouton des dots */
+.slick-dots li button {
+  display: none !important;
+}
+
+/* Style du dot actif */
+.slick-dots li.slick-active {
+  background-color: red !important;
+  width: 10px !important;
+  height: 10px !important;
+  border-radius: 50% !important;
 }
